deployment.app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: default # {"$ref":"#/definitions/io.k8s.cli.setters.namespace"}
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      securityContext:
        runAsUser: 82
        runAsGroup: 82
        fsGroup: 82
      containers:
      - name: nginx
        image: "nginx:1.17.10" # {"$ref":"#/definitions/io.k8s.cli.setters.nginx_image"}
        securityContext:
          runAsUser: 0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - name: code
          mountPath: /app
          subPath: html
        - name: config-files
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: nginx.default.conf
      - name: fpm
        image: 'image' # {"$ref":"#/definitions/io.k8s.cli.setters.oro_code_image"}
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 1
            memory: 4096Mi
          requests:
            cpu: 0.125
            memory: 512Mi
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: code
          mountPath: /app
          subPath: html
        - name: data-var
          mountPath: /data-var
        - name: config-files
          mountPath: /app/config/parameters.configmap.yml
          subPath: parameters.configmap.yml
        - name: config-files
          mountPath: /usr/local/etc/php/conf.d/default.ini
          subPath: php.ini
      volumes:
      - name: code
        emptyDir: {}
      - name: data-var
        persistentVolumeClaim:
          claimName: data-var
      - name: config-files
        configMap:
          name: config-files
      - name: oro-install-parameters
        configMap:
          name: oro-install-parameters
      - name: oro-config
        configMap:
          name: oro-config
