deployment.consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer
  namespace: default # {"$ref":"#/definitions/io.k8s.cli.setters.namespace"}
  labels:
    app: consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer
  template:
    metadata:
      labels:
        app: consumer
    spec:
      containers:
      - name: consumer
        image: aroq/php-fpm-oro:7.3.17.5 # {"$ref":"#/definitions/io.k8s.cli.setters.fpm_image"}
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 0.5
            memory: 1024Mi
          requests:
            cpu: 0.25
            memory: 512Mi
        volumeMounts:
        - name: code
          mountPath: /app
          subPath: html
        - name: oro-parameters
          mountPath: /app/config/parameters.configmap.yml
          subPath: parameters.configmap.yml
        - name: oro-parameters-installed
          mountPath: /app/config/parameters.yml
          subPath: parameters.yml
        - name: oro-parameters
          mountPath: /usr/local/etc/php/conf.d/default.ini
          subPath: php.ini
        command:
        - "php"
        - "-d"
        - "memory_limit=-1"
        - "bin/console"
        - "oro:message-queue:consume"
        - "--env=prod"
        - "-vvv"
      volumes:
      - name: code
        emptyDir: {}
      - name: oro-parameters
        configMap:
          name: oro-parameters
      - name: oro-parameters-installed
        configMap:
          name: oro-parameters-installed
