deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: nginx
        image: nginx:1.17.10
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - name: code
          mountPath: /app
          subPath: html
        - name: oro-parameters
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: nginx.default.conf
      - name: fpm
        image: aroq/php-fpm-oro:7.3.17.5
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 1
            memory: 4096Mi
          requests:
            cpu: 0.25
            memory: 512Mi
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: code
          mountPath: /app
          subPath: html
        - name: data-var
          mountPath: /data-var
        - name: oro-parameters
          mountPath: /app/config/parameters.configmap.yml
          subPath: parameters.configmap.yml
        - name: oro-parameters
          mountPath: /usr/local/etc/php/conf.d/default.ini
          subPath: php.ini
      volumes:
        - name: code
          emptyDir: {}
        - name: data-var
          persistentVolumeClaim:
            claimName: data-var
        - name: oro-parameters
          configMap:
            name: oro-parameters
