service.app.yaml
apiVersion: v1
kind: Service
metadata:
  name: "nginx"
  namespace: default # {"$ref":"#/definitions/io.k8s.cli.setters.namespace"}
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: app
