service.websocket.yaml
apiVersion: v1
kind: Service
metadata:
  name: "websocket"
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: websocket
