service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "app"
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: app
