ingressroute.websocket.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: websocket
  namespace: default # {"$ref":"#/definitions/io.k8s.cli.setters.namespace"}
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`hostname`) && Path(`/ws`)
    kind: Rule
    services:
    - name: websocket
      port: 8080
  tls:
    certResolver: le
