ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: default # {"$ref":"#/definitions/io.k8s.cli.setters.namespace"}
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`hostname`)
    kind: Rule
    services:
    - name: nginx
      port: 80
  tls:
    certResolver: le
